# usage-bar

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  lefthook.yml  package.json  tsconfig.json  vite.config.ts
.changeset/: add-ci-workflow.md  add-release-workflow.md  clean-setup-hooks.md  dep-updates-1777620029594.md  fix-ci-disable-lefthook.md  fix-release-build-trigger.md  fix-release-build-warnings.md  fix-startup-crash-target-cpu-native.md  fresh-codex-tabs.md  immutable-release-flow.md  ready-hotels-do.md  release-not-found-detection.md  release-pipeline.md  sharp-dragons-march.md  update-logo-icon.md  warm-dogs-build.md  windows-release-home.md
.claude/: settings.json
.github/workflows/: build-release.yml  ci.yml  release.yml
assets/: logo.html
opencode/plans/: feature-roadmap.md
scripts/: README.md  create-release.ts  generate-icon.js  prepare-release.ts  publish-release.ts  svg-to-png.js  sync-cargo-version.ts
src/: AGENTS.md  index.html  main.ts
src-tauri/: AGENTS.md  Cargo.toml  Cargo.toml.old  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: AGENTS.md  amp_service.rs  cache.rs  claude_service.rs  claude_service.rs.old  codex_service.rs  commands.rs  credentials.rs  logging.rs  main.rs  models.rs  zai_service.rs
src/components/: AGENTS.md  McpUsageGauge.ts  SettingsView.ts  UsageGauge.ts  ZaiSettings.ts  mcp-usage-gauge.ts  settings-view.ts  usage-gauge.ts
src/styles/: base.css  components.css  theme.css
