[package]
name = "usage-bar-windows"
version = "1.0.0"
description = "A usage bar for Windows"
authors = ["You"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0"
windows = { version = "0.52", features = ["Win32_Security_Credentials", "Win32_Foundation"] }

# Development profile - faster builds
[profile.dev]
opt-level = 0
debug = true
lto = false
codegen-units = 256
incremental = true

# Release profile - smaller binary with good performance
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Additional size-optimized profile option
[profile.release-small]
inherits = "release"
opt-level = "s"
lto = true
