[package]
name = "usage-bar-windows"
version = "1.0.0"
description = "A usage bar for Windows"
authors = ["You"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", default-features = false }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "wry", "webview2-com"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0"
windows = { version = "0.61", features = ["Win32_Security_Credentials", "Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

# Development profile - faster builds
[profile.dev]
opt-level = 0
debug = true
lto = false
codegen-units = 256
incremental = true

# Release profile - smaller binary with good performance
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Additional size-optimized profile option
[profile.release-small]
inherits = "release"
opt-level = "s"
lto = true
